--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ configurations {
 }
 
 dependencies {
-    compile 'org.aperlambda:kimiko:1.0.6'
+    compile 'org.aperlambda:kimiko:1.0.7'
     compile project(':chat')
     provided 'net.md-5:bungeecord-chat:1.12-SNAPSHOT'
     provided 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
@@ -58,6 +58,10 @@ jar {
         (configurations.runtime - configurations.provided).collect {
             it.isDirectory() ? it : zipTree(it)
         }
+    }
+
+    from('src/main/js') {
+        include 'shulker.js'
     }
 }
 
