--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,14 +1,23 @@
 # Do not edit manually! Else the plugin will regenerate entirely the configuration (but it will backup the old one and recover the old values).
 version: ${version}
-# Enables debug mode, when enabled it logs every debug message in the console and ad the "test" command to test packets
-# and some other features.
-# Default: false
-enable_debug: false
 # Enables JavaScript plugins. When enabled, it injects a new plugin loader to load js plugins (with extension .jsar).
 # JavaScript plugins are loaded as normal plugins.
 # Need a restart to make effect.
 # Default: false
 enable_js_support: false
+
+# Debug section, enable or disable some debug options.
+debug:
+  # Enables the `test` command and other base debug messages.
+  # Default: false
+  base: false
+  # Enables the debug of every sent packet. (Recommended to put false, else your console will be flood)
+  # Default: false
+  packets: false
+  # Enables the debug of the PacketHandler.
+  # Default: true
+  connection: true
+
 # The messages sections, please edit them to set your messages.
 commands:
   error:
