--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ compileJava.options.encoding = 'UTF-8'
 repositories {
     maven { url = 'https://aperlambda.github.io/maven' }
     maven { url = 'https://hub.spigotmc.org/nexus/content/groups/public/' }
+    maven { url = 'https://mcelytra.github.io/maven/' }
+    maven { url = 'https://libraries.minecraft.net/' }
     mavenCentral()
     // For Spigot and NMS - NB: First build spigot with BuildTools
     mavenLocal()
@@ -34,7 +36,7 @@ configurations {
 
 dependencies {
     compile 'org.aperlambda:kimiko:1.0.7'
-    compile project(':chat')
+    compile 'org.mcelytra:elytra-core:1.0.0-SNAPSHOT'
     provided 'net.md-5:bungeecord-chat:1.12-SNAPSHOT'
     provided 'org.spigotmc:spigot:1.12.2-R0.1-SNAPSHOT'
 }
