:wrench: Changed maven repo dir.

--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,6 @@ publishing {
         }
     }
     repositories {
-        maven { url = 'file:///home/lambdaurora/maven' }
+        maven { url "$buildDir/repo" }
     }
 }
